# GameEngine

./: .gitmodules  CMakeLists.txt  Config.cmake.in  Readme.md
include/: KeyInMgr.h
src/: KeyInMgr.c
srcbin/: Thing.c  main.c
